<resources>
    <string name="app_name">Atv_05_exec_1_Dado_20_10</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
    <string name="rodar">Rodar</string>
    <string name="texto1">Escolha o Dado :)</string>
    <string name="texto2">Escolha a quantidade de dados :D</string>





</resources>